# artisinal-lm

./: README.md  pyproject.toml  train_model.py
lm/model/: attention.py  ffn.py  linear.py  transformer.py
lm/performance/: benchmark.py  utils.py
lm/performance/reference/: model.py
lm/tokenization/: bpe.py
lm/training/loss/: cross_entropy.py
lm/training/optimization/: adamw.py
lm/training/utils/: checkpointing.py  data_batching.py  gradient_clipping.py  scheduler.py
lm/utils/: latex.py
tests/: adapters.py  conftest.py  test_tokenizer.py
tests/fixtures/: tinystories_sample_10.txt
